syntax = "proto3";

package master_data;

import "commons.proto";

// Unit of Measure - Đơn vị tính
message UnitOfMeasure {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string createdBy = 7;
  string updatedBy = 8;
  int32 version = 9;
  int32 isActive = 10;
}

message CreateUnitOfMeasureInput {
  string code = 1;
  string name = 2;
  int32 sortOrder = 3;
  string createdBy = 4;
}

message UpdateUnitOfMeasureInput {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string updatedBy = 5;
}

message UnitOfMeasureList {
  repeated UnitOfMeasure data = 1;
}

// Export Status - Trạng thái phiếu xuất
message ExportStatus {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string createdBy = 7;
  string updatedBy = 8;
  int32 version = 9;
  int32 isActive = 10;
}

message CreateExportStatusInput {
  string code = 1;
  string name = 2;
  int32 sortOrder = 3;
  string createdBy = 4;
}

message UpdateExportStatusInput {
  string id = 1;
  string code = 2;
  string name = 3;
  int32 sortOrder = 4;
  string updatedBy = 5;
}

message ExportStatusList {
  repeated ExportStatus data = 1;
}

// Service definitions
service MasterDataService {
  // Unit of Measure
  rpc findAllUnitOfMeasures (commons.Query) returns (UnitOfMeasureList) {}
  rpc findUnitOfMeasureById (commons.Id) returns (UnitOfMeasure) {}
  rpc findUnitOfMeasureByCode (commons.Name) returns (UnitOfMeasure) {}
  rpc countUnitOfMeasures (commons.Query) returns (commons.Count) {}
  rpc createUnitOfMeasure (CreateUnitOfMeasureInput) returns (UnitOfMeasure) {}
  rpc updateUnitOfMeasure (UpdateUnitOfMeasureInput) returns (UnitOfMeasure) {}
  rpc destroyUnitOfMeasure (commons.Query) returns (commons.Count) {}
  
  // Export Status
  rpc findAllExportStatuses (commons.Query) returns (ExportStatusList) {}
  rpc findExportStatusById (commons.Id) returns (ExportStatus) {}
  rpc findExportStatusByCode (commons.Name) returns (ExportStatus) {}
  rpc countExportStatuses (commons.Query) returns (commons.Count) {}
  rpc createExportStatus (CreateExportStatusInput) returns (ExportStatus) {}
  rpc updateExportStatus (UpdateExportStatusInput) returns (ExportStatus) {}
  rpc destroyExportStatus (commons.Query) returns (commons.Count) {}
}
